# CORE-Rust-Server

./: Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.test.yml  test.sh
.github/workflows/: docker-publish.yml
config/: config.yaml
kube/: dev-deployment.yaml
resources/dev/: config.yaml
resources/local/: config.yaml
resources/test/: config.yaml
src/: main.rs
src/auth/: authenticator.rs  mod.rs  oauth2_handler.rs  project_authorization_handler.rs  test_authenticator.rs
src/database/: apitoken.rs  common_models.rs  data_models.rs  database.rs  database_model_wrapper.rs  dataset_model.rs  dataset_object_group.rs  dataset_version.rs  mod.rs  mongo_connector.rs  project_model.rs
src/handler/: common.rs  create.rs  delete.rs  handler_test.rs  load.rs  mod.rs  read.rs  update.rs
src/models/: apitoken.rs  common_models.rs  dataset_model.rs  dataset_object_group.rs  dataset_version.rs  mod.rs  project_model.rs
src/objectstorage/: mod.rs  objectstorage.rs  s3_objectstorage.rs
src/server/: dataset_api.rs  load_api.rs  mod.rs  object_api.rs  project_api.rs  server.rs  server_test.rs  util.rs
src/test_util/: init.rs
test/: Dockerfile
