[package]
name = "core_server"
version = "0.1.0"
authors = ["Marius <mariusdieckmann90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
tokio-util = "0.6"
serde_json = "1"
tonic = "0.4"
prost = "0.7"
prost-types = "0.7"
uuid = "0.8"
mongodb = "2.0.0-alpha"
bson = "2.0.0-beta"
async-trait = "0.1"
log = "0.4"
rusoto_core = "0.46"
rusoto_s3 = "0.46"
reqwest = "0.11"
futures = "0.3"
clap = "2"
lazy_static = "1"
config = "0.11"
env_logger = "0.8"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
scienceobjectsdb_rust_api = { git = "https://github.com/ScienceObjectsDB/rust-api", branch = "main"}

[dependencies.serde]
version = "1"
features = ["derive"]

[profile.release]
opt-level = 3
lto = "thin"